<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/MainColor"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:background="@color/Navbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/imageButCatalog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="1dp"
            android:background="@color/Navbar"
            android:contentDescription="@string/Category_item"
            android:onClick="openCatalogCard"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageButtonFav"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_catalog" />

        <ImageButton
            android:id="@+id/imageButtonFav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="9dp"
            android:background="@color/Navbar"
            android:contentDescription="@string/Favorite_item"
            android:onClick="openShoppingCard"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageButCatalog"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.733"
            app:srcCompat="@drawable/ic_fav" />

        <ImageButton
            android:id="@+id/imageButtonHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="21dp"
            android:layout_marginBottom="9dp"
            android:background="@color/Navbar"
            android:contentDescription="@string/Home_item"
            android:onClick="openHomeCard"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageButtonBrand"
            app:layout_constraintStart_toEndOf="@+id/imageButtonFav"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.111"
            app:srcCompat="@drawable/ic_home2" />

        <ImageButton
            android:id="@+id/imageButtonBrand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="9dp"
            android:background="@color/Navbar"
            android:contentDescription="@string/Brand_item"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageButtonHome"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_blackbrand" />

        <ImageButton
            android:id="@+id/imageButtonNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:background="@color/Navbar"
            android:contentDescription="@string/New_item"
            android:onClick="openNewCard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageButtonBrand"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_resource_new" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/brand"
        app:srcCompat="@drawable/ic_brands" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="411dp"
        android:layout_height="98dp"
        android:layout_marginTop="22dp"
        app:layoutDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:srcCompat="@drawable/ic_zara_logo_1" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="376dp"
        android:layout_height="87dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layoutDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11"
        app:srcCompat="@drawable/ic_bershka_1" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="413dp"
        android:layout_height="97dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layoutDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView12"
        app:srcCompat="@drawable/ic_adidas_9" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="410dp"
        android:layout_height="98dp"
        app:layoutDescription="@string/app_name"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView13"
        app:srcCompat="@drawable/ic_pull_bear_2" />

</androidx.constraintlayout.widget.ConstraintLayout>